# tg_contacts

./: .gitignore  LICENSE  README.md  cli.py  pyproject.toml
tg_contacts/: cli.py
tg_contacts.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
